crates/plotnik-lib/tests/02-parser/recovery_validation/capture_space_after_dot_is_anchor.txt
(identifier) @foo . (other)
==== diagnostics ====
error: definition must be named
 --> query.ptk:1:1
  |
1 | (identifier) @foo . (other)
  | ^^^^^^^^^^^^^^^^^
  |
help: give it a name like `Name = (identifier) @foo`

error: definition must be named
 --> query.ptk:1:19
  |
1 | (identifier) @foo . (other)
  |                   ^
  |
help: give it a name like `Name = .`

error: definition must be named
 --> query.ptk:1:21
  |
1 | (identifier) @foo . (other)
  |                     ^^^^^^^
  |
help: give it a name like `Name = (other)`
